--- a/public/home.html
+++ b/public/home.html
@@ -1,5 +1,7 @@
-<div class="panel panel-default">
-        <div class="panel-heading"></div>
+<div class="panel panel-default" style="padding-top:40px">
+        <div class="panel-heading">
+	        <h3>Cheap old surveillance system</h3>
+        </div>
         <div class="panel-body">
                 <div class="container" style="padding-top:100px;">
                         <center><div id="my_camera" style="width:320px; height:240px;"></div></center>
@@ -8,7 +10,7 @@
                                 </div>
                                 <div class="col col-md-8">
                                     <center>
-                                        <toggle id="start" ng-model="toggleValue" ng-change="changed()" on="Disabled" off="Enabled"></toggle>
+                                        <h4>>Start Surveillance</h4></br><toggle id="start" ng-model="toggleValue" ng-change="changed()" on="Disabled" off="Enabled"></toggle>
                                     </center>
                                 </div>
                                 <div class="col col-md-2">
