--- a/public/user.html
+++ b/public/user.html
@@ -1,1 +1,24 @@
-<h1>User Registration</h1>
+<div class="container" style="padding-top:45px">
+        <h1>User Registration</h1>
+
+        <div class="row">
+                <div class="col-md-4">
+                        <div class="form-group">
+                                <label>Name:</label>
+                                <input type="text" ng-model="user.name" class="form-control">
+                        </div>
+                        <div class="form-group">
+                                <label>Cell:</label>
+                                <input type="text" ng-model="user.phone" class="form-control">
+                        </div>
+                        <div class="form-group">
+                                <label>Coordinates:</label>
+                                <input type="text" ng-model="user.coordinates" class="form-control">
+                        </div>
+                        <button type="button" class="btn btn-default" ng-click="save()">Save</button>     
+                </div>
+                <div class="col-md-8">
+                        
+                </div>
+        </div>
+</div>
