got remote working

--- a/public/home.html
+++ b/public/home.html
@@ -10,7 +10,7 @@
                                 </div>
                                 <div class="col col-md-8">
                                     <center>
-                                        <h4>Start Surveillance</h4></br><toggle id="start" ng-model="toggleValue" ng-change="changed()" on="Disabled" off="Enabled"></toggle>
+                                        </br><toggle id="start" ng-model="toggleValue" ng-change="changed()" on="Monitoring" off="Start Monitoring"></toggle>
                                     </center>
                                 </div>
                                 <div class="col col-md-2">
