--- a/public/remote.html
+++ b/public/remote.html
@@ -3,8 +3,9 @@
         <h2 style="padding-top:45px">Remote Assistant   </h2>
         <div class="row">
             <center>
-                    <button type="button" class="btn btn-default" ng-click="start()">Start</button>
-                    <button type="button" class="btn btn-default" ng-click="stop()">Stop</button>
+                    <button id="start" type="button" class="btn btn-default" ng-click="start()">Start</button>
+                    <button id="stop" type="button" class="btn btn-default" ng-click="stop()">Stop</button>
+                    
             </center>
         </div>
 </div>
