--- a/public/remote.html
+++ b/public/remote.html
@@ -1,10 +1,11 @@
 
-<div class="container">
-        <h2 style="padding-top:45px">Remote Assistant   </h2>
-        <div class="row">
-            <center>
-                    <button type="button" class="btn btn-default" ng-click="start()">Start</button>
-                    <button type="button" class="btn btn-default" ng-click="stop()">Stop</button>
-            </center>
+<div class="fluid-container" style="padding-left:45px">
+        <h2 style="padding-top:45px">Remote Assistant</h2>
+        <div class="row" style="padding-left:15px"> 
+            <h3 >Remotely starting surveillance camera at home</h3>
+
+            </br>
+            <button type="button" class="btn btn-default" ng-click="start()">Start</button>
+            <button type="button" class="btn btn-default" ng-click="stop()">Stop</button>
         </div>
 </div>
