--- a/public/remote.html
+++ b/public/remote.html
@@ -5,7 +5,7 @@
             <h3 >Remotely starting surveillance camera at home</h3>
 
             </br>
-            <button type="button" class="btn btn-default" ng-click="start()">Start</button>
-            <button type="button" class="btn btn-default" ng-click="stop()">Stop</button>
+            <button id="start" type="button" class="btn btn-default" ng-click="start()">Start</button>
+            <button id="stop" type="button" class="btn btn-default" ng-click="stop()">Stop</button>
         </div>
 </div>
