--- a/public/remote.html
+++ b/public/remote.html
@@ -1,11 +1,16 @@
-
-<div class="fluid-container" style="padding-left:45px">
-        <h2 style="padding-top:45px">Remote Assistant</h2>
-        <div class="row" style="padding-left:15px"> 
-            <h3 >Remotely starting surveillance camera at home</h3>
-
-            </br>
-            <button id="start" type="button" class="btn btn-default" ng-click="start()">Start</button>
-            <button id="stop" type="button" class="btn btn-default" ng-click="stop()">Stop</button>
-        </div>
+<div class="panel panel-default" style="padding-top:40px">
+    <div class="panel-heading">
+        <center>
+            <h3>Remote Assistant</h3>
+        </center>
+    </div>
+    <div class="panel-body">
+            <div class="row" style="padding-left:15px">
+                <h3>Start your Camera from Home!</h3>
+        
+                </br>
+                <button id="start" type="button" class="btn btn-default" ng-click="start()">Start</button>
+                <button id="stop" type="button" class="btn btn-default" ng-click="stop()">Stop</button>
+            </div>        
+    </div>
 </div>
