--- a/public/user.html
+++ b/public/user.html
@@ -12,9 +12,13 @@
                                 <input type="text" ng-model="user.phone" class="form-control">
                         </div>
                         <div class="form-group">
-                                <label>Coordinates:</label>
-                                <input type="text" ng-model="user.coordinates" class="form-control">
+                                <label>Password:</label>
+                                <input type="password" placeholder="Password" ng-model="user.password" class="form-control">
                         </div>
+                        <div class="form-group">
+                                        <label>Confirm Password:</label>
+                                        <input placeholder="Confirm password" type="password" ng-model="user.conpassword" class="form-control">
+                                </div>
                         <button type="button" class="btn btn-default" ng-click="save()">Save</button>     
                 </div>
                 <div class="col-md-8">
