--- a/public/home.html
+++ b/public/home.html
@@ -2,7 +2,7 @@
 <div class="panel panel-default" style="padding-top:40px">
         <div class="panel-heading">
                 <center>
-                        <h3>Dashboard</h3>
+                        <h3>Select options for your Home Survellaince Device</h3>
                 </center>
         </div>
         <div class="panel-body">
@@ -16,14 +16,14 @@
 
                         <div class="row">
                                 <div class="col col-md-4">
-                                        <h4>Start Surveillance</h4>
+                                        <h4>Start Surveillance(Click enable to start Surveillance</h4>
                                         </br>
                                         <toggle id="start" ng-model="toggleValue" ng-change="changed()" on="Enabled" off="Disabled"></toggle>
 
                                 </div>
                                 <div class="col col-md-4">
                                         <h4>
-                                                <span class="glyphicon glyphicon-bell" aria-hidden="true"></span> &nbspPush notification</h4>
+                                                <span class="glyphicon glyphicon-bell" aria-hidden="true"></span> &nbspPush notification(Enable to receive alert texts)</h4>
                                         </br>
                                         <toggle id="start" ng-model="toggleValue_" ng-change="pushNotification()" on="Enabled" off="Disabled"></toggle>
                                 </div>
