Adding alert in remote assitance

--- a/public/remote.html
+++ b/public/remote.html
@@ -1,11 +1,13 @@
 
 <div class="fluid-container" style="padding-left:45px">
         <h2 style="padding-top:45px">Remote Assistant</h2>
-        <div class="row" style="padding-left:15px"> 
+        <div class="row" style="padding-left:15px"  > 
             <h3 >Remotely starting surveillance camera at home</h3>
 
             </br>
-            <button id="start" type="button" class="btn btn-default" ng-click="start()">Start</button>
-            <button id="stop" type="button" class="btn btn-default" ng-click="stop()">Stop</button>
+            <button type="button" class="btn btn-default" ng-click="start()">Start</button>
+            <button type="button" class="btn btn-default" ng-click="stop()">Stop</button>
+            <button type="button" class="btn btn-danger" ng-click="alert()">Alert</button>
+
         </div>
 </div>
