--- a/public/home.html
+++ b/public/home.html
@@ -15,15 +15,11 @@
                         </div>
 
                         <div class="row">
-                                <div class="col col-md-4">
-                                        <h4 style="margin-bottom:-10px">Start Surveillance (Click to start your device)</h4></br><toggle id="start" ng-model="toggleValue" ng-change="changed()" on="Enabled&nbsp&nbsp" off="Disabled&nbsp&nbsp"></toggle></br><p>&nbsp</p>
+                                <div class="col col-md-6">
+                                        <h4 style="margin-bottom:-10px" class='pull-right'>Start Surveillance (Click to start your device)</h4></br><div class='pull-right'  style="margin-top: 21px;"><toggle id="start" ng-model="toggleValue" ng-change="changed()" on="Enabled&nbsp&nbsp" off="Disabled&nbsp&nbsp"></toggle></div></br><p>&nbsp</p>
                                                         
                                 </div>
-                                <div class="col col-md-4">
-                                        <h4 style="margin-bottom:-10px"><span class="glyphicon glyphicon-bell" aria-hidden="true"></span> &nbspPush notification (Click to enable alert message)</h4></br>
-                                        <toggle id="start" ng-model="toggleValue_" ng-change="pushNotification()" on="Enabled&nbsp&nbsp" off="Disabled&nbsp&nbsp"></toggle></br><p>&nbsp</p>
-                                </div>
-                                <div class="col col-md-4">
+                                <div class="col col-md-6">
                                         <h4 style="margin-bottom:-10px"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span> &nbspAlert Police (Click to alert police)</h4></br>
                                         <button type="button" ng-click="alertPolice()" class="btn btn-danger">Alert</button></br><p></p>
                                 </div>
